--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -192,6 +192,6 @@ sqlOrchestratorPipelines:
     - pipelines/p1.py
     - .prophecy/ide/pipelines/p1.json
     - models/p1/schema.yml
-    - models/p1/p1__join_on_a.sql
+    - models/p1/p1__limit_gem.sql
     createdAt: '2026-01-19 08:07:11'
 sqlBusinessApps: {}
